force-app/main/default/objects/Historia_Cl_nica_Especializada__c/Historia_Cl_nica_Especializada__c.object-meta.xml
<CustomObject>
    <label>Historia Clínica Especializada</label>
    <nameField>
        <label>Nombre de Historia Clínica</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historias Clínicas Especializadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>