force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Ambiente_de_uso_HCE__c.field-meta.xml
<CustomField>
    <fullName>Ambiente_de_uso_HCE__c</fullName>
    <label>Ambiente de uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domiciliario</fullName>
                <default>true</default>
                <label>Domiciliario</label>
            </value>
            <value>
                <fullName>Comunitario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>