force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Antecedentes_HCE__c.field-meta.xml
<CustomField>
    <fullName>Antecedentes_HCE__c</fullName>
    <label>Antecedentes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>