force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Complicaci_n_de_la_internaci_n_HCE__c.field-meta.xml
<CustomField>
    <fullName>Complicaci_n_de_la_internaci_n_HCE__c</fullName>
    <label>Complicación de la internación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>