force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/DNI_HCE__c.field-meta.xml
<CustomField>
    <fullName>DNI_HCE__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente_HCE__r.DNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>