force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Duraci_n_de_la_internaci_n_en_d_as_HCE__c.field-meta.xml
<CustomField>
    <fullName>Duraci_n_de_la_internaci_n_en_d_as_HCE__c</fullName>
    <label>Duración de la internación en días</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>