force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Edad_en_meses_HCE__c.field-meta.xml
<CustomField>
    <fullName>Edad_en_meses_HCE__c</fullName>
    <formula>((TODAY()- Fecha_nacimiento_HCE__c ))/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad en meses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>