force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Edad_HCE__c.field-meta.xml
<CustomField>
    <fullName>Edad_HCE__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente_HCE__r.Edad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>