force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/EQ5D_VAS_actual_HCE__c.field-meta.xml
<CustomField>
    <fullName>EQ5D_VAS_actual_HCE__c</fullName>
    <label>EQ5D VAS actual</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>