force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Fecha_de_la_visita_HCE__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_visita_HCE__c</fullName>
    <label>Fecha de la visita</label>
    <required>true</required>
    <type>Date</type>
</CustomField>