force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Fecha_nacimiento_HCE__c.field-meta.xml
<CustomField>
    <fullName>Fecha_nacimiento_HCE__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente_HCE__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha nacimiento</label>
    <type>Date</type>
</CustomField>