force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Movilidad_comunitaria_actual_HCE__c.field-meta.xml
<CustomField>
    <fullName>Movilidad_comunitaria_actual_HCE__c</fullName>
    <label>Movilidad comunitaria actual</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>