force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/ndice_de_Barthel_actual_HCE__c.field-meta.xml
<CustomField>
    <fullName>ndice_de_Barthel_actual_HCE__c</fullName>
    <label>Índice de Barthel actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 20 Total</fullName>
                <default>true</default>
                <label>&lt; 20 Total</label>
            </value>
            <value>
                <fullName>20-35 Grave</fullName>
            </value>
            <value>
                <fullName>40-55 Moderado</fullName>
            </value>
            <value>
                <fullName>&gt; o igual de 60 Leve</fullName>
            </value>
            <value>
                <fullName>100 Independiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>