force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Nombre_y_Apellido_del_Paciente_HCE__c.field-meta.xml
<CustomField>
    <fullName>Nombre_y_Apellido_del_Paciente_HCE__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nombre y apellido del paciente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historias Clínicas Especializadas</relationshipLabel>
    <relationshipName>Historias_Cl_nicas_Especializadas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>