force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Nro_de_afiliado_Obra_Social_Prepaga_HCE__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_afiliado_Obra_Social_Prepaga_HCE__c</fullName>
    <label>Nro. de afiliado Obra Social/Prepaga</label>
    <length>50</length>
    <type>Text</type>
</CustomField>