force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Nro_de_HCE__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_HCE__c</fullName>
    <displayFormat>HCE-{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Nro. de HCE</label>
    <type>AutoNumber</type>
</CustomField>