force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/OOSS_HCE__c.field-meta.xml
<CustomField>
    <fullName>OOSS_HCE__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente_HCE__r.Obra_social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OOSS</label>
    <type>Text</type>
</CustomField>