force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Patolog_a_HCE__c.field-meta.xml
<CustomField>
    <fullName>Patolog_a_HCE__c</fullName>
    <label>Patología</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acidemia metilmalonica/propionica</fullName>
            </value>
            <value>
                <fullName>Aciduria Arginosucinica</fullName>
            </value>
            <value>
                <fullName>Aciduria Glutarica</fullName>
            </value>
            <value>
                <fullName>ACV Hemorragíco (Accidente cerebrovascular)</fullName>
            </value>
            <value>
                <fullName>ACV Isquemico (Accidente cerebrovascular)</fullName>
            </value>
            <value>
                <fullName>Adrenoleucodistrofia</fullName>
            </value>
            <value>
                <fullName>Alergia a la Proteina de leche de vaca (APLV)</fullName>
            </value>
            <value>
                <fullName>Alzheirmer</fullName>
            </value>
            <value>
                <fullName>Anorexia</fullName>
            </value>
            <value>
                <fullName>Asma</fullName>
            </value>
            <value>
                <fullName>Bulimia</fullName>
            </value>
            <value>
                <fullName>Cirrosis Hepatica</fullName>
            </value>
            <value>
                <fullName>cirugía Aparato genitourinario</fullName>
            </value>
            <value>
                <fullName>Cirugía de cabeza y cuello</fullName>
            </value>
            <value>
                <fullName>Cirugía Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Demencia otros tipos</fullName>
            </value>
            <value>
                <fullName>Demencia senil</fullName>
            </value>
            <value>
                <fullName>Desnutrición</fullName>
            </value>
            <value>
                <fullName>Desnutrición Asociada a enfermedad</fullName>
            </value>
            <value>
                <fullName>Deterioro cognitivo crónico</fullName>
            </value>
            <value>
                <fullName>DGG (Deficiencia de Glucosa/Galactosa)</fullName>
            </value>
            <value>
                <fullName>Diabetes (DBT)</fullName>
            </value>
            <value>
                <fullName>Encefalitis</fullName>
            </value>
            <value>
                <fullName>Encefalopatía crónica no evolutiva (ECNE)</fullName>
            </value>
            <value>
                <fullName>Enfermedad obstructiva Crónica (EPOC)</fullName>
            </value>
            <value>
                <fullName>Epilepsia Refractaria</fullName>
            </value>
            <value>
                <fullName>Esclerosis lateral amiotrófica (ELA)</fullName>
            </value>
            <value>
                <fullName>Esofagitis Eosinofílica</fullName>
            </value>
            <value>
                <fullName>Fenilcetonuria</fullName>
            </value>
            <value>
                <fullName>Fibrosis Quistica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>