force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Requerimiento_de_VM__c.field-meta.xml
<CustomField>
    <fullName>Requerimiento_de_VM__c</fullName>
    <inlineHelpText>VM: ventilación motora</inlineHelpText>
    <label>Requerimiento de VM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>