force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Rolados__c.field-meta.xml
<CustomField>
    <fullName>Rolados__c</fullName>
    <label>Rolados</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>