force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/TQT__c.field-meta.xml
<CustomField>
    <fullName>TQT__c</fullName>
    <inlineHelpText>TQT: traqueostomía</inlineHelpText>
    <label>TQT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>