force-app/main/default/objects/Historia_Cl_nica_Especializada__c/fields/Visita_HCE__c.field-meta.xml
<CustomField>
    <fullName>Visita_HCE__c</fullName>
    <label>Visita</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>