force-app/main/default/objects/Historia_Cl_nica_Especializada__c/recordTypes/Historia_Cl_nica_de_Rehabilitaci_n_Motora_de_Ingreso.recordType-meta.xml
<RecordType>
    <fullName>Historia_Cl_nica_de_Rehabilitaci_n_Motora_de_Ingreso</fullName>
    <active>true</active>
    <label>Historia Clínica de Rehabilitación Motora de Ingreso</label>
</RecordType>